--- a/weather_cards.html/weather_cards.html
+++ b/weather_cards.html/weather_cards.html
@@ -44,7 +44,7 @@
 <body>
     <h1 class="time"></h1>
     <div class="cards">
-        <div class="card">
+        <!-- <div class="card">
             <div class="top">
                 <img src="img/yintian.jpg" alt="">
             </div>
@@ -53,7 +53,7 @@
             <h3 class="temperature_high text">最高溫度：26℃</h3>
             <h3 class="temperature_low text">最低溫度：20℃</h3>
             <h3 class="description text">稍有寒意至舒適</h3>
-        </div>
+        </div> -->
     </div>
     <script>
         fetch(
@@ -82,6 +82,7 @@
                         var weather_img = 'img/yu.jpg'
                     }
                     var cards = document.querySelector('.cards');
+                    var old_msg = cards.innerHTML;
                     cards.innerHTML +=
                         `<div class="card">
                             <div class="top">
