--- a/message-board/massage_board.html
+++ b/message-board/massage_board.html
@@ -11,7 +11,7 @@
 <body>
     <div class="outside">
         <div class="container">
-            <form action="message.json">
+            <form action="https://xqing0912.github.io/JavaScript_-Exercise/message-board/message.json">
                 <div class="one">
                     留言板
                 </div>
