--- a/2020-05-06/bootstrap_onePage.html
+++ b/2020-05-06/bootstrap_onePage.html
@@ -279,7 +279,7 @@
 
     <section id="section_three" class="parallax-mirror">
         <div class="parallax-window" data-parallax="scroll"
-            data-image-src="https://i1.hdslb.com/bfs/archive/d0a4ec0f0106f31bdfb92b8bf7dea188598e3929.jpg"
+            data-image-src="./shenhuxi.jpg"
             data-speed="0.5">
             <p>朱迪回到兔窝镇后，发现用来驱虫的植物“午夜嚎叫”（Nighthowler）才是动物发狂的主因。接着，她赶回动物城查找尼克并向他道歉；两人和好后一同继续破案，两人先找到威斯顿公爵，希望可以找到破案的线索，威斯顿公爵正在卖一些DVD影片(影片名称则是从皮克斯做过的电影去做修改的)，但威斯顿公爵对两人的出现不以为然，甚至还出言不逊并挑衅，两人把他带到大先生将他逼供，威斯顿公爵告诉他到一个废弃的地铁站可以找到在秘密实验室里将午夜嚎叫制成子弹的公羊道格（Doug）。朱迪和尼克在顺利获取实验室的证据后欲奔往警局，途中却被已成为市长的羊副市长拦截。原来羊副市长就是整个事件的主谋，她不但设计让狮市长失势，还想借由煽动在群众的恐惧来掌握权力。后来，朱迪和尼克上演戏码欺骗羊副市长，并用录音笔将她主谋及陷害狮市长的供词录下，而赶到现场的警方也逮捕了羊副市长和她的同僚。最后，午夜嚎叫的解药被研发出来，所有受影响的动物亦逐渐康复，朱迪也回到警局再次担任警官；尼克则在从警官学校毕业后，成为动物城警局的第一位狐狸警官，以及朱迪的同伙警员。
             </p>
@@ -347,7 +347,7 @@
             }
         });
         $('.parallax-window').parallax({
-            imageSrc: 'https://i1.hdslb.com/bfs/archive/d0a4ec0f0106f31bdfb92b8bf7dea188598e3929.jpg'
+            imageSrc: './shenhuxi.jpg'
         });
         var navbarSupportedContent = document.querySelector('#navbarSupportedContent');
         var navbar_toggler = document.querySelector('.navbar-toggler');
