--- a/2020-05-05/one_page_bootstrap.html
+++ b/2020-05-05/one_page_bootstrap.html
@@ -10,7 +10,7 @@
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Document</title>
+    <title>bootstrap-onePage</title>
     <style>
         html {
             scroll-behavior: smooth;
@@ -235,7 +235,6 @@
                 max-width: 1400px;
             }
         }
-
     </style>
 </head>
 
@@ -382,7 +381,6 @@
             },
             loop: true
         });
-       
     </script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
