--- a/message-board/massage_board.html
+++ b/message-board/massage_board.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Masage_board</title>
+    <title>Ajax留言板</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -18,19 +18,19 @@
                 <input type="text" name="date" hidden>
                 <div class="two mar">
                     <label for="#title" class="font">標題</label><br>
-                    <input id='title' type="text" name="title">
+                    <input id='title' type="text" name="title" placeholder="請填入標題">
                 </div>
                 <div class="three mar">
                     <label for="#content" class="font">內容</label><br>
-                    <textarea id="content" name="content" cols="30" rows="30"></textarea>
+                    <textarea id="content" name="content" cols="30" rows="30" placeholder="請填入留言内容"></textarea>
                 </div>
                 <div class="four mar">
-                    <label for="#href" class="font">超鏈接</label><br>
-                    <input id="href" type="text" name="href">
+                    <label for="#href" class="font">超連接</label><br>
+                    <input id="href" type="text" name="href" placeholder="請填入一個超連接">
                 </div>
                 <div class="five mar">
                     <label for="#image_url" class="font">圖片連接</label><br>
-                    <input id="image_url" type="text" name="image_url">
+                    <input id="image_url" type="text" name="image_url" placeholder="請填入一張圖片的超連接">
                 </div>
                 <div class="six ">
                     <button type="reset">清除內容</button>
@@ -53,7 +53,8 @@
             </a>
         </div> -->
     </div>
-    <script src="../js/jquery-3.5.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
 
